--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h2>Update CSS Variables with <span class="hl">JS</span></h2>
+
+    <div class="controls">
+      <!-- Tip: The for attribute of <label> must be equal to the id attribute of the related element to bind them together. 
+            A label can also be bound to an element by placing the element inside the <label> element. -->
+
+      <label for="spacing">Spacing:</label>
+      <input
+        id="spacing"
+        type="range"
+        name="spacing"
+        min="10"
+        max="200"
+        value="10"
+        data-sizing="px"
+      />
+
+      <label for="blur">Blur:</label>
+      <input
+        id="blur"
+        type="range"
+        name="blur"
+        min="0"
+        max="25"
+        value="10"
+        data-sizing="px"
+      />
+
+      <label for="base">Base Color</label>
+      <input id="base" type="color" name="base" value="#ffc600" />
+
+      <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500hwt" />
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
